--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-qr-code": "^2.0.12",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "swiper": "8",
